# FYPA

./: .gitignore  .gitmodules  FYPA.py  FYPA.spec  NOTICE  README.md  _verify_board_outline_row.py  _verify_marker_hover.py  _verify_triangulate.py  altium_annotations.py  altium_geometry.py  altium_loader.py  altium_viewer.py  build_dist.bat  gl_mesh_viewer.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
ExampleDesigns/Sandbox/: Main.SchDoc  Sandbox.PcbDoc  Sandbox.PcbLib  Sandbox.PrjPcb  Sandbox.SCHLIB
docs/: CONTRIBUTORS.md  via_resistance_model.md
docs/user-guide/: 01-sources-and-sinks.md  02-sources-and-sinks-editor.md  03-series-elements.md  04-regulators.md  05-viewer-tour.md  07-gerber-import.md  README.md
fypa/: __init__.py  altium_annotations.py  altium_extract.py  altium_geometry.py  altium_loader.py  altium_viewer.py  cli.py  editor_directives.py  gl_mesh_viewer.py  lean_solution.py  navlib_camera.py  paraview_export.py  project_file.py  spacemouse_nav.py
fypa/altium/: annotations.py  extract.py  loader.py
fypa/gerber/: extract.py  import_ui.py
packaging/: FYPA.spec  Run_FYPA.pas  build_dist.bat
pdnsolver/: CHANGES.md  __init__.py  colormaps.py  mesh.py  paraview.py  problem.py  solver.py  ui.py  units.py  vtu_fields.py
tests/: conftest.py  test_analytical.py  test_annotations.py  test_invariants.py  test_rails.py  test_regression.py  test_single_net.py  test_spacemouse_nav.py
tests/golden/: Imperial.json  Methuselah.json  Sandbox.json
tools/: build_icon_ico.py
