# Project + tooling configuration for FYPA.
#
# FYPA is run as a set of top-level scripts (FYPA.py + sibling modules) rather
# than an installed package. `[project]` exists so uv can resolve the runtime
# dependency tree (including the altium_monkey submodule, see [tool.uv.sources]
# below); `[tool.uv] package = false` tells uv NOT to try to build/install
# FYPA itself as a wheel.
#
# Day-to-day commands:
#   uv sync                  # runtime + dev deps (default)
#   uv sync --no-default-groups  # runtime only (what end-users build from)
#   uv sync --group build    # adds PyInstaller for packaging
#   uv run pytest
#   uv run ruff check .

[project]
name = "fypa"
version = "0.0.0"
description = "FEM Y-parameter Power Analyser — PDN analysis for Altium and Gerber PCB designs."
# altium_monkey pins `>=3.11,<3.13`; FYPA tracks the same window.
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- Altium project parser (fetched from upstream git; see [tool.uv.sources]) ---
    "altium-monkey",

    # --- Qt + GUI ---
    "PySide6==6.11.1",

    # --- Custom OpenGL viewer ---
    "PyOpenGL==3.1.10",
    "PyOpenGL_accelerate==3.1.10",

    # --- FEM solver + mesher (pdnsolver/) ---
    "numpy==2.2.3",
    "scipy==1.17.1",
    "shapely==2.1.2",
    "triangle==20250106",

    # In-process Clipper2 polygon engine — the default copper-fuse backend
    # (fypa._clipper_fuse), ~2x faster than the threaded shapely union on large
    # boards. shapely stays as the automatic fallback (on error or if this is
    # ever absent), and FYPA_FUSE_BACKEND=shapely forces the legacy path.
    "pyclipr==0.1.8",

    # Fast direct linear solver (MKL PARDISO). Optional but strongly
    # recommended — several times faster than scipy's SuperLU on large boards.
    # pdnsolver.solver falls back to SuperLU automatically if it is absent.
    # Pulls in Intel MKL (~180 MB).
    "pypardiso==0.4.7",

    # --- Colormaps + CPU-side hover-probe interpolator ---
    "matplotlib==3.10.9",

    # --- ParaView VTU export (File > Export > ParaView, and `FYPA paraview` CLI) ---
    "lxml==5.3.0",

    # --- Gerber + Excellon import (File > Import Gerber Files…) ---
    # Pure-Python RS-274X / NC-drill parser. Pulls flask / quart / h2 as
    # transitive deps for its bundled web viewer; those modules aren't on our
    # import path and are excluded from the PyInstaller bundle (see
    # packaging/FYPA.spec).
    "gerbonara==1.5.0",
]

[project.optional-dependencies]
# 3Dconnexion SpaceMouse — official NavLib on Windows/macOS (requires 3DxWare).
# Linux uses system libspnav/spacenavd only; no pip package needed there.
spacemouse = [
    "pynavlib==0.9.4; sys_platform == 'win32' or sys_platform == 'darwin'",
]

[dependency-groups]
# Installed by default with `uv sync`. Test + lint tooling.
dev = [
    "pytest==9.0.3",
    "ruff==0.15.13",
]
# Opt-in via `uv sync --group build`. Only needed by whoever is producing
# the PyInstaller bundle, not by end users.
build = [
    "pyinstaller",
]

[tool.uv]
# FYPA itself is not a wheel-installable package — it's a set of scripts
# (FYPA.py + sibling modules) run directly out of the working copy. Skip the
# project build step; uv still resolves and installs all dependencies.
package = false

[tool.uv.sources]
# altium_monkey is fetched directly from the upstream repo at a pinned tag.
# To bump: edit the tag, then `uv lock --upgrade-package altium-monkey`.
altium-monkey = { git = "https://github.com/wavenumber-eng/altium_monkey", tag = "v2026.5.20" }

[tool.pytest.ini_options]
# Tests import `pdnsolver` (and, for regression tests, shell out to FYPA.py),
# so the repo root must be on sys.path.
pythonpath = ["."]
testpaths = ["tests"]
# Keep solver/mesher warnings visible but non-fatal during tests.
filterwarnings = [
    "default",
]

[tool.ruff]
# The codebase predates linting; keep the line length generous to avoid a
# mechanical reformat, and target the Python version the venv pins.
line-length = 100
target-version = "py311"
# altium_monkey is a vendored git submodule with its own tooling.
# _verify_*.py are local hand-driven debug drivers (hardcoded user paths,
# ad-hoc throwaway code) — not production source, so they're outside lint.
extend-exclude = ["altium_monkey", ".venv", "build", "dist", "_verify_*.py"]

[tool.ruff.lint]
# Conservative first adoption: real bug-class checks only — pyflakes (`F`:
# unused/undefined names, bad imports), syntax/import errors (`E4`/`E9`),
# and comprehension / string-format / misc hygiene (`C4`, `UP`, `PIE`).
#
# Deliberately NOT enabled yet (the codebase predates linting; each is a
# separate, larger cleanup, not a low-risk first step):
#   * pycodestyle style rules (`E1`/`E2`/`E5`/`E7`) — cosmetic only here.
#   * flake8-bugbear (`B`) — ~70 hits, mostly intentional abstract-base-class
#     patterns and loop-variable closures. Add `"B"` to `select` when that
#     review is scheduled.
select = ["F", "E4", "E9", "C4", "UP", "PIE"]
ignore = [
    # Import-not-at-top: the GUI / loader modules deliberately place some
    # imports mid-file (lazy heavy deps, conditional fallbacks). Placement is
    # intentional, so this E4 sub-rule is silenced rather than enforced.
    "E402",
]
